--- a/action.yaml
+++ b/action.yaml
@@ -1,12 +1,15 @@
 # action.yml
 name: 'Custom Gihtub Action'
-description: 'GA takes inputs and returns outputs'
+description: 'A Github Action that takes an input and returns the square of the number'
 inputs:
   num:
+    description: 'Enter a number'
     required: true
     default: "1"
 outputs:
   num_squared:
+  description: 'Square of the input'
+  #need to specify the extra 'value' field for 'composite' actions
     value: ${{ steps.get-square.outputs.num_squared }}
 runs:
   using: 'composite'
